syntax = "proto3";

package user;

service UserService {
    rpc ValidateUser(GetValidatedUserRequest) returns (GetValidatedUserResponse);
}

message GetValidatedUserRequest {
    string email= 1;
    string password = 2;
}

message GetValidatedUserResponse {
    User user = 1;
}

message User {
    int32 id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
}
